added uuid and edit functionality

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -133,6 +133,11 @@ input[type="submit"]:hover {
 	cursor: pointer;
 }
 
+.edited {
+	font-style: italic;
+	text-decoration: underline;
+}
+
 @media (max-width: 500px) {
 	.card {
 		flex-direction: column;
