--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -2,22 +2,35 @@
 <title>Django Todo App</title>
 {% endblock %} {% block home %}
 <h1>Todo App with Django</h1>
-{% for todo in todos %}
-<div class="card">
-	<div class="left">
-		<span>Id: {{ todo.id }}</span><br />
-		<h3>
-			Title: {{ todo.title }} {% if todo.is_edited %}<span class="edited"
-				>(Edited)</span
-			>{% endif %}
-		</h3>
-		<span>Finished: {{ todo.is_finished }}</span><br />
-		<span>Created at: {{ todo.created_at }}</span><br />
-		<span>Updated at: {{ todo.updated_at }}</span><br />
+<div class="todolist-container">
+	<form class="form-select__wrapper">
+		<select name="order" id="order" onchange="location = this.value">
+			<option value="/?q=asc">Ascending</option>
+			<option value="/?q=desc">Descending</option>
+			<option value="/?q=date">Date</option>
+		</select>
+	</form>
+	{% for todo in todos %}
+	<div class="card">
+		<div class="left">
+			<span>Id: {{ todo.id }}</span><br />
+			<h3>
+				Title: {{ todo.title }} {% if todo.is_edited %}<span
+					class="edited"
+					>(Edited)</span
+				>{% endif %}
+			</h3>
+			<span>Finished: {{ todo.is_finished }}</span><br />
+			<span>Created at: {{ todo.created_at }}</span><br />
+			<span>Updated at: {{ todo.updated_at }}</span><br />
+		</div>
+		<div class="right">
+			<a href="{% url 'edit_todo' todo.id %}" class="edit-btn">Edit</a>
+			<a href="{% url 'delete_todo' todo.id %}" class="delete-btn"
+				>Delete</a
+			>
+		</div>
 	</div>
-	<div class="right">
-		<a href="{% url 'edit_todo' todo.id %}" class="edit-btn">Edit</a>
-		<a href="{% url 'delete_todo' todo.id %}" class="delete-btn">Delete</a>
-	</div>
+	{% endfor %} {% comment %} List other todos {% endcomment %}
 </div>
-{% endfor %} {% comment %} List other todos {% endcomment %} {% endblock %}
+{% endblock %}
